# personal-discord-weatherbot

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  basic.py  layers.yml  pyproject.toml  setup.cfg
tests/: test_weatherapi.py  test_weatherbot.py
weather_bot/: __init__.py  bot.py  forecast_logic.py  formats.py  hello.py  tasks.py  weather.py
weather_bot/config/: __init__.py  token.py
